{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 36,
  "lineage": "0edc3cdf-3ffe-a152-96df-8bb72d2295f6",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "managed_node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:992382405189:instance/i-0ee4db4ada8a97043",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee4db4ada8a97043",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0ba7bd13d0b2452",
            "private_dns": "ip-10-0-1-104.ec2.internal",
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-34-228-64-138.compute-1.amazonaws.com",
            "public_ip": "34.228.64.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e4944a2d24e5983",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044027e9605359790",
            "tags": {
              "Name": "host_node_0"
            },
            "tags_all": {
              "Name": "host_node_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0700b24f820cc0cd8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:992382405189:instance/i-0f7cc16d4024cff3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7cc16d4024cff3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa0b8f85c07a72ad",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-54-147-60-70.compute-1.amazonaws.com",
            "public_ip": "54.147.60.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-070a0c2311a74c0fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044027e9605359790",
            "tags": {
              "Name": "host_node_1"
            },
            "tags_all": {
              "Name": "host_node_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0700b24f820cc0cd8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:992382405189:instance/i-09e0bea622da05340",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e0bea622da05340",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-055030499b39e45c5",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_ip": "10.0.1.233",
            "public_dns": "ec2-54-226-157-226.compute-1.amazonaws.com",
            "public_ip": "54.226.157.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dcfc35c210b9712b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044027e9605359790",
            "tags": {
              "Name": "host_node_2"
            },
            "tags_all": {
              "Name": "host_node_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0700b24f820cc0cd8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:992382405189:instance/i-01b9e9a51f6765554",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b9e9a51f6765554",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1bc64450dfb3abf",
            "private_dns": "ip-10-0-1-173.ec2.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-52-91-4-53.compute-1.amazonaws.com",
            "public_ip": "52.91.4.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059bebf1d896f3f4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044027e9605359790",
            "tags": {
              "Name": "host_node_3"
            },
            "tags_all": {
              "Name": "host_node_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0700b24f820cc0cd8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382405189:internet-gateway/igw-0e4eb4628a4b1e659",
            "id": "igw-0e4eb4628a4b1e659",
            "owner_id": "992382405189",
            "tags": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "vpc_id": "vpc-0149ad05ce811de35"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382405189:route-table/rtb-01ac32df280e4dd71",
            "id": "rtb-01ac32df280e4dd71",
            "owner_id": "992382405189",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4eb4628a4b1e659",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "vpc_id": "vpc-0149ad05ce811de35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ansible_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097f1b6842c5dd952",
            "route_table_id": "rtb-01ac32df280e4dd71",
            "subnet_id": "subnet-044027e9605359790"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_route_table.ansible_public_route",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382405189:security-group/sg-0700b24f820cc0cd8",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0700b24f820cc0cd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/1233",
                "from_port": 1233,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1233
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ansible_public_sg",
            "name_prefix": "",
            "owner_id": "992382405189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible-SecurityGroup"
            },
            "tags_all": {
              "Name": "Ansible-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0149ad05ce811de35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ansible_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382405189:subnet/subnet-044027e9605359790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-044027e9605359790",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382405189",
            "tags": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "vpc_id": "vpc-0149ad05ce811de35"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382405189:vpc/vpc-0149ad05ce811de35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbb54f974b0e8ab1",
            "default_route_table_id": "rtb-06b09a1aea42e7468",
            "default_security_group_id": "sg-03351d51beb3a7a40",
            "dhcp_options_id": "dopt-0dcd8f7bb0ea7bc48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0149ad05ce811de35",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06b09a1aea42e7468",
            "owner_id": "992382405189",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}